--- a/app/src/main/res/layout/activity_change_backgroud.xml
+++ b/app/src/main/res/layout/activity_change_backgroud.xml
@@ -74,11 +74,11 @@
 
     </TableLayout>
 
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="430dp"
-        android:text="Save" />
+    <!--<Button-->
+        <!--android:id="@+id/btnSave"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="430dp"-->
+        <!--android:text="Save" />-->
 </RelativeLayout>
